Tue Jul 22 11:53:28 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/ZIOP.pdf:
          Added draft ZIOP spec to the documentation. If you want to know
          more about ZIOP check this spec first

Tue Jul 22 11:34:28 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/ZIOP/*:
          New ZIOP test using zlib

Tue Jul 22 11:31:28 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        Major commit to add ZIOP to the core of TAO. This adds the capability
        to compress the data on the wire. This is a proof of concept implementation
        that we try to get standardized within the CORBA spec. Interoperability
        with other ORBs and different TAO versions isn't guaranteed until ZIOP
        has been formally adopted by the OMG. If you want to experiment with ZIOP
        add TAO_HAS_ZIOP 1 as define to your config.h file. This prototype will need
        some more work to support ZIOP for the full request/reply chain, in some
        cases the reply isn't compressed at this moment. For this we need to rework
        the full policy support in the ORB for which we search funding.

        * MPC/config/ziop.mpb:
          New base project for anyone using ZIOP

        * tao/BiDir_GIOP/BiDir_Service_Context_Handler.cpp:
        * tao/BiDir_GIOP/BiDir_Service_Context_Handler.h:
          Updated this class to the new service context handler API which is more
          generic

        * tao/CDR.cpp:
        * tao/CDR.h:
        * tao/CDR.inl:
          Added a compressed flag to the input and output stream which indicated
          whether this stream contains compressed data

        * tao/GIOP_Message_Base.cpp:
          Decompress the data when it is compressed

        * tao/GIOP_Message_Generator_Parser_12.cpp:
          Use new service context handler api

        * tao/GIOP_Message_State.{h,cpp,inl}:
          Added compressed flag

        * tao/IIOP_Transport.cpp: